@@ -1,3 +1,8 @@
+2013-11-08  Andrew Bennett  <andrew.bennett@imgtec.com>
+
+	* basic.exp: Added ufr testcase.
+	* ufr.s: New test.
+
 2011-01-06  Hans-Peter Nilsson  <hp@axis.com>
 
 	* testutils.inc: Correct comment syntax fallout from
